--- a/src/Vista/frmMenuSistemas.form
+++ b/src/Vista/frmMenuSistemas.form
@@ -96,7 +96,7 @@
                   <Font name="Arial" size="16" style="0"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Iconos/icon-login.png"/>
+                  <Image iconType="3" name="/Iconos/icon-exit.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Cerrar Sesi&#xf3;n"/>
               </Properties>
