--- a/src/Vista/frmVentaXSucursalPartSistemas.form
+++ b/src/Vista/frmVentaXSucursalPartSistemas.form
@@ -32,7 +32,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Iconos/icon-login.png"/>
+                  <Image iconType="3" name="/Iconos/icon-exit.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Cerrar sesi&#xf3;n"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
